--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Hello world!!!</h1>
     <h2>Hope it will work</h2>
+    <h3> Is it working </h3>
 </body>
 <script src="script.js"></script>
 </html>
