Answered the question

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>Hello world!!!</h1>
     <h2>Hope it will work</h2>
     <h3> Is it working </h3>
+    <h3> Yes, its working!</h3>
 </body>
 <script src="script.js"></script>
 </html>
