--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding:0;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello world!!!</h1>
